servicemesh-configs/ubi8-http-gateway-woking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ubi8-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: ubi8-httpd
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ubi8
spec:
  hosts:
  - "*"
  gateways:
  - ubi8-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: ubi8-httpd
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ubi8-httpd
spec:
  host: ubi8-httpd
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
