servicemesh-configs/ubi8-http-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ubi8-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: ubi8-httpd
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "api.example.com"
    - "www.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ubi8
spec:
  hosts:
  - "*"
  gateways:
  - ubi8-gateway
  tls:
  - match:
    - port: 443
      sni_hosts:
      - api.example.com
      - www.example.com
    route:
    - destination:
        host: ubi8-httpd
        port:
          number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ubi8-httpd
spec:
  host: ubi8-httpd
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
